--- a/bioticine/Packages/manifest.json
+++ b/bioticine/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.inspiaaa.unityhfsm": "https://github.com/Inspiaaa/UnityHFSM.git",
+    "com.inspiaaa.unityhfsm": "file:C:/Users/minhk/OneDrive/Desktop/RMIT/Weird shit/ai-series-part-47-main/Library/PackageCache/com.inspiaaa.unityhfsm@2168c17857",
+    "com.unity.2d.animation": "9.1.0",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.3.1",
