--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 bioticine/Packages/manifest.json
 bioticine/Packages/packages-lock.json
+bioticine/Assets/BossBattle.unity
+bioticine/Assets/BossBattle.unity
+bioticine/Assets/BossBattle.unity
+bioticine/Assets/BossBattle.unity
+bioticine/Assets/BossBattle.unity
+bioticine/Assets/BossBattle.unity
